changed console log to alert

--- a/jq1-1.html
+++ b/jq1-1.html
@@ -174,7 +174,7 @@
                 return true;
             }
             else {
-                console.log("gender required");
+                alert("gender required");
             }
 
         }
@@ -192,9 +192,6 @@
                 return false;
             }
         }
-
-
-
     </script>
 </body>
 
